--- a/src/Menu/MainMenu.fxml
+++ b/src/Menu/MainMenu.fxml
@@ -17,6 +17,8 @@
               <menus>
                 <Menu mnemonicParsing="false" text="File">
                   <items>
+                        <MenuItem mnemonicParsing="false" text="New Session" />
+                        <MenuItem mnemonicParsing="false" onAction="#loadRace" text="Load Session(.csv)" />
                     <MenuItem mnemonicParsing="false" text="Close" />
                   </items>
                 </Menu>
@@ -43,28 +45,15 @@
       </VBox>
    </bottom>
    <center>
-      <VBox alignment="CENTER" BorderPane.alignment="CENTER">
+      <HBox prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+   </center>
+   <left>
+      <VBox alignment="TOP_CENTER" prefHeight="358.0" prefWidth="135.0" BorderPane.alignment="CENTER">
          <children>
-            <HBox alignment="CENTER">
-               <children>
-                  <Label text="Main Menu" textAlignment="CENTER">
-                     <font>
-                        <Font name="System Bold" size="18.0" />
-                     </font>
-                  </Label>
-               </children>
-            </HBox>
-            <VBox alignment="BASELINE_CENTER" prefHeight="200.0" prefWidth="100.0">
-               <children>
-                  <Button mnemonicParsing="false" onAction="#newRaceButton" text="New Race" textAlignment="CENTER" />
-                  <Button mnemonicParsing="false" onAction="#existingRaceButton" text="Load Race">
-                     <opaqueInsets>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                     </opaqueInsets>
-                  </Button>
-               </children>
-            </VBox>
+            <Label fx:id="filename_label" prefHeight="28.0" prefWidth="77.0" text="FileName" />
+            <Label prefHeight="31.0" prefWidth="125.0" text="Registered Sessions:" />
+            <ListView fx:id="registered_sessions_list" />
          </children>
       </VBox>
-   </center>
+   </left>
 </BorderPane>
